# rust-lz-fear

./: .gitignore  Cargo.toml  README.md
benches/: my_benchmark.rs
examples/: better.rs  delz4.rs  dolz4.rs  minimal.rs
fuzz/: Cargo.toml
fuzz/corpus/decode/: Cargo.toml.lz4  README.md.lz4  RLE.LZ4  uncomp.data.lz4
fuzz/fuzz_targets/: decode.rs  interop_decode.rs  roundtrip_fuzz.rs
src/: compress.rs  decompress.rs  lib.rs
src/compress/: framed.rs  mod.rs
src/decompress/: framed.rs  mod.rs  raw.rs
src/framed/: compress.rs  decompress.rs  header.rs  mod.rs
src/raw/: decompress.rs  mod.rs
src/raw/compress/: mod.rs
tests/: issue-15.rs  output_equivalence.rs
