[package]
name = "lz-fear"
version = "0.1.1"
authors = ["main() <main@ehvag.de>"]
edition = "2018"

description = "A fast pure-rust no-unsafe implementation of LZ4 compression and decompression"
keywords = ["compression", "lz4", "compress", "decompression", "decompress"]
categories = [ "algorithms", "compression", "encoding" ]
license = "MIT"
readme = "README.md"

repository = "https://github.com/main--/rust-lz-fear"

[dependencies]
byteorder = "1.3.1"
twox-hash = { version = "1.5.0", default-features = false }
thiserror = "1.0"
fehler = "1.0"
bitflags = "1.2.1"

[dev-dependencies]
criterion = "0.3"
rand = "0.7.3"

[[bench]]
name = "my_benchmark"
harness = false

[profile.release]
debug = true
lto = "thin"
